welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:14: error: Unmatched closing brace '}' ignored here
 }
 ^